	* codegen.c (output_stmt): disabled lookup_source calls that seem
	  to be not needed
	* parser.y (perform_body): partial implementation of FR #288
	  check inline PERFORM without imperative statement against
	  configuration "missing-statement"
	* cobc.c (process_command_line): make sure cb_missing_statement
	  is not stricter than CB_WARNING when cb_relaxed_syntax_checks is active

2018-09-11  Ron Norman <rjn@inglenet.com>

	* tree.c, codegen.c: added checks for cb_flag_remove_unreachable

2018-09-10  Ron Norman <rjn@inglenet.com>

	* tree.c: removed redundant warnings about xyz 'is always' TRUE/FALSE
	* flag.def: new compile option: 'remove-unreachable' defaults to on
	      So then -fno-remove-unreachable does not remove unreachable code
	* typeck.c: checks cb_flag_remove_unreachable
	* cobc.c: if -g then clear cb_flag_remove_unreachable

2018-09-06  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* typeck.c (validate_move): always check full length for VALUE
	  without trimming the literal if alphanumeric

2018-09-01  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* codegen.c (output_module_register_init): partially fix bug #548:
	  used previous reference creation for XML registers

2018-08-24  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* typeck.c (cb_build_cond): keep source-reference for trace/position
	  code generation and compiler messages
	* typeck.c (build_evaluate): store source-reference for WHEN OTHER
	* tree.c (copy_file_line): disabled save/restore source-reference
	  of expressions as the current code works identical without it
	* codegen.c (output_stmt): use source-reference of expression for
	  WHEN / WHEN OTHER, output its location to return correct position
	  for runtime messages and tracing

2018-08-21  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* parser.y: implemented MS-COBOL position-specifier for DISPLAY/ACCEPT
	  and DISPLAY ERASE
	* parser.y, reserved.c: added COMP-0 as PENDING