@@ -169,6 +169,7 @@ static void	scan_define_options (const char *);
 static void	copy_word_in_quotes (char ** const);
 static void	copy_two_words_in_quotes (char ** const, char ** const);
 static void	add_synonym (const int);
+static void *	copy_literal (cb_tree l);
 
 %}
 
@@ -937,7 +938,7 @@ H#[0-9A-Za-z]+ {
 			if (p78->chk_const && p78->not_const) {
 				break;
 			}
-			yylval = CB_VALUE (p78->fld_78->values);
+			yylval = copy_literal (CB_VALUE (p78->fld_78->values));
 			SET_LOCATION (yylval);
 			RETURN_TOK (LITERAL);
 		}
@@ -1999,6 +2000,26 @@ cb_add_const_var (const char *name, cb_tree value)
 	} else {
 		top_78_ptr = const_78_ptr;
 	}
+}
+
+
+/* duplicate the given literal to assign a different source location */
+static void *
+copy_literal (cb_tree l)
+{
+	cb_tree x;
+
+	/* LCOV_EXCL_START */
+	if (!CB_LITERAL_P(l)) {
+		cobc_err_msg (_("unexpected tree tag: %d"), (int)CB_TREE_TAG (l));
+		COBC_ABORT ();
+	}
+	/* LCOV_EXCL_STOP */
+
+	x = cobc_parse_malloc (sizeof (struct cb_literal));
+	memcpy (x, l, sizeof (struct cb_literal));
+
+	return x;
 }
 
 static void
